# telefiles

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-25-admin-pairing-via-user-picker.md  2026-06-25-telefiles-mvp.md
docs/superpowers/specs/: 2026-06-25-admin-pairing-via-user-picker-design.md  2026-06-25-telefiles-telegram-bot-design.md
telefiles/: __main__.py  app.py  auth.py  config.py  files.py  handlers.py  keyboards.py  navigation.py  shares.py  storage.py
tests/: conftest.py  test_app.py  test_auth.py  test_config.py  test_files.py  test_handlers_auth.py  test_handlers_nav.py  test_handlers_refresh.py  test_handlers_upload.py  test_handlers_zip.py  test_keyboards.py  test_main.py  test_navigation.py  test_shares.py  test_storage.py
