[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telefiles"
version = "0.3.0"
description = "Telegram bot for browsing, uploading and downloading files from jailed shares"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21,<22",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
telefiles = "telefiles.__main__:main"

[tool.setuptools.packages.find]
include = ["telefiles*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    # pytest-asyncio's own internals call a deprecated asyncio API on Python 3.14+
    "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning",
]
